tests/baselines/reference/scopeClassDeclarations.errors.txt
tests/cases/compiler/scopeClassDeclarations.ts(4,11): error TS1477: A class declaration can only be used in a scope where other statements can reference it.
tests/cases/compiler/scopeClassDeclarations.ts(11,11): error TS1477: A class declaration can only be used in a scope where other statements can reference it.


==== tests/cases/compiler/scopeClassDeclarations.ts (2 errors) ====
    declare const condition: boolean;
    
    if (condition)
        class C {} // runtime error if transpiled to ES2015 or above: Unexpected token class.
              ~
!!! error TS1477: A class declaration can only be used in a scope where other statements can reference it.
    
    new C(); // runtime error if transpiled to ES5, because 'C' is undefined.
    
    if (condition) 
        console.log(); 
    else
        class X {}
              ~
!!! error TS1477: A class declaration can only be used in a scope where other statements can reference it.
    
    function foo() {
    	return class X {}; // Not an error.
    }
    
    while (class C {}) {  // Not an error.
        break;
    }
    
    switch (condition) {
        case true:
            class C {} // Not an error.
            break;
        case false: {
            class C {} // Not an error.
            break;
        }
        default:
            class X {} // Not an error.
            break;
    }
    